Added necessary dependencies, gitignore file, and set spring openapi api-key in properties file.